학습내용/도구/java 설치하기
c의 안좋은점 환경에 따라 같은 것도 개발을 다시해야함.

           ▽

  소스코드를 하나 짜서 만들어놓으면 어느 시스템 환경에서
  돌리던 동일하게 작동하도록 만든 것이 java

           ▽
   소스코드 공개후 jcp라는 곳에서 java가 발전 (기업들이)


jre 자바 개발 환경
 자바가 실행만 됨

jdk 자바 개발 

 자바 개발 도구 


자바의 종류 

java se는? standard edition   표준버전                <-공부는 이걸로

java me는? mobile             모바일용 개발 

java ee는? enterprise edition 기업용                  <-웹어플리케이션 


자바를 os의 형태로 만든것이 android




C:\Program Files\Java\jdk1.8.0_221\bin에 javac가 있다.

cmd에서 

C:\Users\JHTA>cd C:\Program Files\Java\jdk1.8.0_221\bin

C:\Program Files\Java\jdk1.8.0_221\bin> javac -version          <-현재 버전 check 
javac 1.8.0_221








code를 짠다. -> 기계가 이해할 수 있는 언어로 바꾼다. 
      이 행위를 compile이라 한다.
       위의 javac는 javacompiler라 한다.



기계어 

ex)1011011110110010111     ->abc로 약속하자      
   0010001010110110010
   11101100100001000101    ->def로 약속하자          <-2세대


            ▽

if 

else  등을 활용                                      <-3세대



------------------------------------------------------------------------------------------------------------------
public class hello {
           public static void main(String[] args){
                      system.out.println("Hello world"); <-대소문자 구분이 매우 중요하다.
                       }
}

쓰고난후 c드라이브 안에 "hello.java"란 이름으로 저장.    <- ""를 꼭 넣어야한다.










java 환경설정 

1. jdk 설치
2. 환경변수 설정                           <-어디에서든 javacompiler를 사용할 수 있도록 환경을 설치하는 것
 컴퓨터 속성 >고급> 환경변수 설정 >시스템 변수> path의 변수값 맨 앞에 C:\Program Files\Java\jdk1.8.0_221\bin;를 추가해준다/
C:\Program Files\Java\jdk1.8.0_221\bin;+기존의 주소
*JRE와 JDK차이 
JAVA RUNTIME ENVIRONMETN 와 JAVA DEVELOPEMENT KIT이며 
JDK는 개발 KIT를 가지고 있고 JRE를 포함하고 있다. 



ex)

C:\>dfadfasdf
'dfadfasdf'은(는) 내부 또는 외부 명령, 실행할 수 있는 프로그램, 또는
배치 파일이 아닙니다.


path라고 써져있는 환경변수에서 찾아본후 없다고 표시하는 것.


C:\>javac Hello.java
Hello.java:1: error: class hello is public, should be declared in a file named hello.java
public class hello {
       ^
Hello.java:3: error: package system does not exist
                      system.out.println("Hello world");            <-코드를 잘못 입력한 경우
                            ^
2 errors

C:\>javac Hello.java                                                <-잘 입력한 경우 
                                                                      C:\에 Hello.class가 저장된다.





C:\>dir Hello.*
 C 드라이브의 볼륨에는 이름이 없습니다.
 볼륨 일련 번호: C08B-F859

 C:\ 디렉터리

2019-10-10  오후 05:40               415 Hello.class             <-java에서 이 파일을 열게 된다. (2진코드이다. 기계가 읽는 것)
2019-10-10  오후 05:40               159 Hello.java
               2개 파일                 574 바이트
               0개 디렉터리  411,633,987,584 바이트 남음






C:\>java Hello                            <-실행 명령어. 원래는 Hello.class인데 원래 class를 읽어 들이는거라 뒤는 생략한다.


개발을 쉽게 하기위해 툴 사용 

 
IDE(통합개발환경) 툴보다 더 발전된 형태

IDE의 종류 3가지 
netBeans 무료 
eclipse  무료
inteliJ  유료가 있다.


환경변수- 시스템에 
CLASSPATH
. 
입력



--------------------------------------------------------------------------------------------------------------------------
IDE-ECLIPSE 설치하기 

다운로드 패키지로 다운받기 (기업용) >C디스크설치>ECLIPSE 릭 WORKSPACE 폴더를 ECLIPSE 폴더에 생성 후 실행한다.

CREATE A PROJECT>JAVA PROJECT>BASIC>FINISH버튼>PERSPECTIVE 클릭


SRC소스 

자바 프로그램은 class 단위로 만들게 된다.

src>new>class생성>Hello 입력>Hello.java가 생성된다.
----------------------------------------------------------------------------------------------------------------
Hello class
package basic;






